@@ -1,11 +1,10 @@
 package es.upm.miw.betca_tpv_core.infrastructure.mongodb.daos;
 
-import es.upm.miw.betca_tpv_core.domain.model.ShoppingState;
-import es.upm.miw.betca_tpv_core.domain.model.Tax;
-import es.upm.miw.betca_tpv_core.domain.model.TreeType;
+import es.upm.miw.betca_tpv_core.domain.model.*;
 import es.upm.miw.betca_tpv_core.infrastructure.mongodb.daos.synchronous.*;
 import es.upm.miw.betca_tpv_core.infrastructure.mongodb.entities.*;
 import lombok.extern.log4j.Log4j2;
+import org.apache.logging.log4j.LogManager;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
@@ -13,6 +12,7 @@ import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.time.Month;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 import static java.math.BigDecimal.ZERO;
@@ -25,24 +25,49 @@ public class DatabaseSeederDev {
     private final ArticlesTreeDao articlesTreeDao;
     private final TicketDao ticketDao;
     private final CashierDao cashierDao;
+    private final RgpdDao rgpdDao;
     private final OfferDao offerDao;
+    private final CustomerPointsDao customerPointsDao;
+    private final InvoiceDao invoiceDao;
+    private final BudgetDao budgetDao;
+    private final VoucherDao voucherDao;
 
     private final ComplaintDao complaintDao;
 
     private final DatabaseStarting databaseStarting;
 
     @Autowired
-    public DatabaseSeederDev(ArticleDao articleDao, ProviderDao providerDao, ArticlesTreeDao articlesTreeDao,
-                             TicketDao ticketDao, CashierDao cashierDao, DatabaseStarting databaseStarting,
-                             OfferDao offerDao,ComplaintDao complaintDao) {
+    public DatabaseSeederDev(
+            ArticleDao articleDao,
+            ProviderDao providerDao,
+            ArticlesTreeDao articlesTreeDao,
+            TicketDao ticketDao,
+            CashierDao cashierDao,
+            DatabaseStarting databaseStarting,
+            RgpdDao rgpdDao,
+            OfferDao offerDao,
+            CustomerPointsDao customerPointsDao,
+            InvoiceDao invoiceDao,
+            BudgetDao budgetDao,
+            VoucherDao voucherDao,
+            ComplaintDao complaintDao
+    ) {
+
         this.articleDao = articleDao;
         this.providerDao = providerDao;
         this.articlesTreeDao = articlesTreeDao;
         this.ticketDao = ticketDao;
         this.cashierDao = cashierDao;
         this.databaseStarting = databaseStarting;
+        this.rgpdDao = rgpdDao;
         this.offerDao = offerDao;
+
+        this.customerPointsDao = customerPointsDao;
+        this.invoiceDao = invoiceDao;
+        this.budgetDao = budgetDao;
+        this.voucherDao = voucherDao;
         this.complaintDao =complaintDao;
+
         this.deleteAllAndInitializeAndSeedDataBase();
     }
 
@@ -56,9 +81,13 @@ public class DatabaseSeederDev {
 
         this.complaintDao.deleteAll();
         this.articleDao.deleteAll();
-
         this.providerDao.deleteAll();
         this.cashierDao.deleteAll();
+        this.offerDao.deleteAll();
+        this.customerPointsDao.deleteAll();
+        this.invoiceDao.deleteAll();
+        this.budgetDao.deleteAll();
+        this.voucherDao.deleteAll();
 
         log.warn("------- Delete All -----------");
         this.databaseStarting.initialize();
@@ -166,59 +195,143 @@ public class DatabaseSeederDev {
         TicketEntity[] tickets = {
                 new TicketEntity("5fa45e863d6e834d642689ac", "nUs81zZ4R_iuoq0_zCRm6A",
                         List.of(shoppingList[0], shoppingList[1]), date, new BigDecimal("20.0"),
-                        ZERO, ZERO, "note", "666666000"),
+                        ZERO, ZERO, "note", "666666000", ZERO),
                 new TicketEntity("5fa45f6f3a61083cb241289c", "lpiHOlsoS_WkkEyWeFNJtg",
                         List.of(shoppingList[2]), date, new BigDecimal("25.0"),
-                        ZERO, ZERO, "note", "666666004"),
+                        ZERO, ZERO, "note", "666666004", ZERO),
                 new TicketEntity("5fa4603b7513a164c99677ac", "FGhfvfMORj6iKmzp5aERAA",
                         List.of(shoppingList[3], shoppingList[4]), date, new BigDecimal("18.0"),
-                        ZERO, ZERO, "note", "666666004"),
+                        ZERO, ZERO, "note", "666666004", ZERO),
                 new TicketEntity("5fa4608f4928694ef5980e4c", "WB9-e8xQT4ejb74r1vLrCw",
                         List.of(shoppingList[5]), date, new BigDecimal("20"),
-                        new BigDecimal("5"), ZERO, "note", "666666005"),
+                        new BigDecimal("5"), ZERO, "note", "666666005", ZERO),
+                new TicketEntity("5fa4608f4928694ef5980e4d", "WB9-e8xQT4ejb74r1vLrCw",
+                        List.of(shoppingList[5]), date, new BigDecimal("20"),
+                        new BigDecimal("5"), ZERO, "note", "666666005", ZERO),
         };
         this.ticketDao.saveAll(Arrays.asList(tickets));
         log.warn("        ------- tickets");
+
+        byte[] SampleAgreementEncoded = "SampleAgreement".getBytes();
+        byte[] newAgreementEncoded = "NewAgreement".getBytes();
+        RgpdEntity[] rgpdList = {
+                RgpdEntity.builder().agreement(SampleAgreementEncoded).rgpdType(RgpdType.BASIC).userMobile("600000001").userName("Alex").build(),
+                RgpdEntity.builder().agreement(newAgreementEncoded).rgpdType(RgpdType.ADVANCED).userMobile("600000002").userName("John").build(),
+                RgpdEntity.builder().agreement(SampleAgreementEncoded).rgpdType(RgpdType.ADVANCED).userMobile("600000003").userName("Stephen").build(),
+                RgpdEntity.builder().agreement(newAgreementEncoded).rgpdType(RgpdType.MEDIUM).userMobile("600000004").userName("Darius").build()
+        };
+        this.rgpdDao.saveAll(Arrays.asList(rgpdList));
+        log.warn("        ------- data-protection-rgpd");
+        
         LocalDateTime dateOfferCreation = LocalDateTime.of(2019, Month.JANUARY, 12, 10, 10);
         LocalDateTime dateOfferExpiry = LocalDateTime.of(2020, Month.JANUARY, 12, 10, 10);
         OfferEntity[] offers = {
-                OfferEntity.builder().reference("to1").description("td1").discount(BigDecimal.ONE)
+                OfferEntity.builder().reference("SrIZGD09QayXFbeplhQi9A").description("Offer code 15% discount").discount(15)
                         .articleEntities(List.of(articles[0], articles[1])).creationDate(dateOfferCreation)
                         .expiryDate(dateOfferExpiry).build(),
-                OfferEntity.builder().reference("to2").description("td2").discount(BigDecimal.TEN)
-                        .articleEntities(List.of(articles[0], articles[1])).creationDate(dateOfferCreation)
+                OfferEntity.builder().reference("R_hRxaoeQuyEDdZpmpboVg").description("Offer code 20% discount").discount(20)
+                        .articleEntities(Collections.emptyList()).creationDate(dateOfferCreation)
                         .expiryDate(dateOfferExpiry).build(),
-                OfferEntity.builder().reference("to3").description("td3").discount(BigDecimal.ONE)
-                        .articleEntities(List.of(articles[0], articles[1])).creationDate(dateOfferCreation)
+                OfferEntity.builder().reference("zbtBZtcRQJGCR4ULwslweg").description("Offer code 10% discount").discount(10)
+                        .articleEntities(List.of(articles[4])).creationDate(dateOfferCreation)
                         .expiryDate(dateOfferExpiry).build(),
-                OfferEntity.builder().reference("to4").description("td4").discount(BigDecimal.TEN)
-                        .articleEntities(List.of(articles[0], articles[1])).creationDate(dateOfferCreation)
+                OfferEntity.builder().reference("cjmJNO_2R8CVRq031FRKTQ").description("Offer code 5% discount").discount(5)
+                        .articleEntities(List.of(articles[5], articles[7])).creationDate(dateOfferCreation)
                         .expiryDate(dateOfferExpiry).build(),
         };
         this.offerDao.saveAll(Arrays.asList(offers));
         log.warn("        ------- offers");
 
-        LocalDateTime dateComplaintCreationArticle1 = LocalDateTime.of(2021, Month.JANUARY, 1, 20, 56);
-        LocalDateTime dateComplaintCreationArticle2 = LocalDateTime.of(2022, Month.MAY, 31, 1, 34);
-        LocalDateTime dateComplaintCreationArticle3 = LocalDateTime.of(2021, Month.JULY, 15, 10, 4);
+        this.customerPointsDao.saveAll(List.of(
+                CustomerPointsEntity.builder().value(0).lastDate(LocalDateTime.now()).userMobileNumber("6").build(),
+                CustomerPointsEntity.builder().value(100).lastDate(LocalDateTime.now()).userMobileNumber("66").build(),
+                CustomerPointsEntity.builder().value(20).lastDate(LocalDateTime.now()).userMobileNumber("666666003").build(),
+                CustomerPointsEntity.builder().value(50).lastDate(LocalDateTime.of(2024, Month.SEPTEMBER, 1, 0, 0)).userMobileNumber("666666004").build(),
+                CustomerPointsEntity.builder().value(10).lastDate(LocalDateTime.of(2023, Month.JANUARY, 1, 0, 0)).userMobileNumber("666666005").build()
+        ));
 
-        ComplaintEntity[] complaints = {
-                ComplaintEntity.builder().description("Queja aleatoria").reply("")
-                        .article(articles[0]).registrationDate(dateComplaintCreationArticle1).state(ComplaintState.OPEN)
-                        .registrationDate(dateComplaintCreationArticle1).userMobile("66").build(),
-                ComplaintEntity.builder().description("Queja MIW").reply("Respuesta MIW").state(ComplaintState.CLOSED)
-                        .article(articles[1]).registrationDate(dateComplaintCreationArticle2)
-                        .registrationDate(dateComplaintCreationArticle2).userMobile("66").build(),
-                ComplaintEntity.builder().description("Queja Grado").reply("").state(ComplaintState.OPEN)
-                        .article(articles[2]).registrationDate(dateComplaintCreationArticle3)
-                        .userMobile("66").build(),
+        log.warn("------- seeded customer points for users");
+
+        InvoiceEntity[] invoice = {
+                InvoiceEntity.builder().id("1").identity(20251).baseTax(new BigDecimal("14.5")).taxValue(new BigDecimal("34"))
+                        .ticketId("5fa45e863d6e834d642689ac").userMobile("666666000").creationDate(LocalDateTime.now()).build(),
+                InvoiceEntity.builder().id("2").identity(20252).baseTax(new BigDecimal("5.9")).taxValue(new BigDecimal("85"))
+                        .ticketId("5fa4603b7513a164c99677ac").userMobile("666666004").creationDate(LocalDateTime.now()).build(),
+                InvoiceEntity.builder().id("3").identity(20253).baseTax(new BigDecimal("27.1")).taxValue(new BigDecimal("20"))
+                        .ticketId("5fa4608f4928694ef5980e4c").userMobile("666666003").creationDate(LocalDateTime.now()).build(),
+                InvoiceEntity.builder().id("4").identity(20254).baseTax(new BigDecimal("16.3")).taxValue(new BigDecimal("15"))
+                        .ticketId("5fa45f6f3a61083cb241289c").userMobile("666666002").creationDate(LocalDateTime.now()).build(),
         };
-        this.complaintDao.saveAll(Arrays.asList(complaints));
-        log.warn("        ------- complaints");
+                this.invoiceDao.saveAll(Arrays.asList(invoice));
+        LogManager.getLogger(this.getClass()).warn("        ------- invoices");
+
+        LocalDateTime budgetCreationDate = LocalDateTime.of(2019, Month.JANUARY, 12, 10, 10);
+        BudgetEntity[] budgets = {
+            BudgetEntity.builder().id("1").reference("1").creationDate(budgetCreationDate).shoppingEntityList(List.of(shoppingList[0], shoppingList[1])).build(),
+            BudgetEntity.builder().id("2").reference("2").creationDate(budgetCreationDate).shoppingEntityList(List.of(shoppingList[0], shoppingList[1])).build()
+        };
+
+
+        this.budgetDao.saveAll(Arrays.asList(budgets));
+        log.warn("        ------- budgets");
+
+        LocalDateTime creationDate = LocalDateTime.of(2019, Month.JANUARY, 12, 10, 10);
+        VoucherEntity[] vouchers = {
+                VoucherEntity.builder().reference("VOUCHER001").value(BigDecimal.valueOf(50)).creationDate(creationDate).dateOfUse(null).user(User.builder().mobile("635635635").build()).build(),
+                VoucherEntity.builder().reference("VOUCHER002").value(BigDecimal.valueOf(30)).creationDate(creationDate).dateOfUse(creationDate.plusDays(10)).user(User.builder().mobile("635635635").build()).build(),
+                VoucherEntity.builder().reference("VOUCHER003").value(BigDecimal.valueOf(100)).creationDate(creationDate).dateOfUse(null).user(User.builder().mobile("635635635").build()).build()
+        };
+
+        this.voucherDao.saveAll(Arrays.asList(vouchers));
+        log.warn("        ------- vouchers");
+
+        CashierEntity[] cashiers = {
+                CashierEntity.builder().id("00010b300000000000000000").cardSales(BigDecimal.valueOf(100)).cashSales(BigDecimal.valueOf(1)).withdrawal(BigDecimal.valueOf(20)).deposit(BigDecimal.valueOf(20))
+                        .initialCash(BigDecimal.valueOf(0)).finalCash(BigDecimal.valueOf(1)).comment("Demo cashier closure Jan 1970 (1)")
+                        .openingDate(LocalDateTime.of(1970,1,1,8,0)).closureDate(LocalDateTime.of(1970,1,1,20,0)).build(),
+                CashierEntity.builder().id("00025cb00000000000000000").cardSales(BigDecimal.valueOf(200)).cashSales(BigDecimal.valueOf(10)).withdrawal(BigDecimal.valueOf(9)).deposit(BigDecimal.valueOf(0))
+                        .initialCash(BigDecimal.valueOf(1)).finalCash(BigDecimal.valueOf(2)).comment("Demo cashier closure Jan 1970 (2)")
+                        .openingDate(LocalDateTime.of(1970,1,2,8,0)).closureDate(LocalDateTime.of(1970,1,2,20,0)).build(),
+                CashierEntity.builder().id("002898300000000000000000").cardSales(BigDecimal.valueOf(20)).cashSales(BigDecimal.valueOf(100)).withdrawal(BigDecimal.valueOf(100)).deposit(BigDecimal.valueOf(3))
+                        .initialCash(BigDecimal.valueOf(2)).finalCash(BigDecimal.valueOf(5)).comment("Demo cashier closure Jan 1970 (3)")
+                        .openingDate(LocalDateTime.of(1970,1,31,8,0)).closureDate(LocalDateTime.of(1970,1,31,20,0)).build(),
+                CashierEntity.builder().id("0029e9b00000000000000000").cardSales(BigDecimal.valueOf(25)).cashSales(BigDecimal.valueOf(25)).withdrawal(BigDecimal.valueOf(20)).deposit(BigDecimal.valueOf(3))
+                        .initialCash(BigDecimal.valueOf(5)).finalCash(BigDecimal.valueOf(13)).comment("Demo cashier closure Feb 1970 (1)")
+                        .openingDate(LocalDateTime.of(1970,2,1,8,0)).closureDate(LocalDateTime.of(1970,2,1,20,0)).build(),
+                CashierEntity.builder().id("003c5eb00000000000000000").cardSales(BigDecimal.valueOf(100)).cashSales(BigDecimal.valueOf(27)).withdrawal(BigDecimal.valueOf(30)).deposit(BigDecimal.valueOf(0))
+                        .initialCash(BigDecimal.valueOf(13)).finalCash(BigDecimal.valueOf(10)).comment("Demo cashier closure Feb 1970 (2)")
+                        .openingDate(LocalDateTime.of(1970,2,15,8,0)).closureDate(LocalDateTime.of(1970,2,15,20,0)).build(),
+                CashierEntity.builder().id("00cea7200000000000000000").cardSales(BigDecimal.valueOf(0)).cashSales(BigDecimal.valueOf(40)).withdrawal(BigDecimal.valueOf(25)).deposit(BigDecimal.valueOf(50))
+                        .initialCash(BigDecimal.valueOf(10)).finalCash(BigDecimal.valueOf(75)).comment("Demo cashier closure Jun 1970 (1)")
+                        .openingDate(LocalDateTime.of(1970,6,6,8,0)).closureDate(LocalDateTime.of(1970,6,6,20,0)).build(),
+                CashierEntity.builder().id("01e0ed300000000000000000").cardSales(BigDecimal.valueOf(75)).cashSales(BigDecimal.valueOf(25)).withdrawal(BigDecimal.valueOf(50)).deposit(BigDecimal.valueOf(0))
+                        .initialCash(BigDecimal.valueOf(75)).finalCash(BigDecimal.valueOf(50)).comment("Demo cashier closure Dec 1970 (1)")
+                        .openingDate(LocalDateTime.of(1970,12,31,8,0)).closureDate(LocalDateTime.of(1970,12,31,20,0)).build(),
+                CashierEntity.builder().id("01e23eb00000000000000000").cardSales(BigDecimal.valueOf(15)).cashSales(BigDecimal.valueOf(100)).withdrawal(BigDecimal.valueOf(0)).deposit(BigDecimal.valueOf(50))
+                        .initialCash(BigDecimal.valueOf(50)).finalCash(BigDecimal.valueOf(200)).comment("Demo cashier closure Jan 1971 (1)")
+                        .openingDate(LocalDateTime.of(1971,1,1,8,0)).closureDate(LocalDateTime.of(1971,1,1,20,0)).build()
+        };
+
+        this.cashierDao.saveAll(Arrays.asList(cashiers));
+        log.warn("        ------- cashierClosure");
+
+            LocalDateTime dateComplaintCreationArticle1 = LocalDateTime.of(2021, Month.JANUARY, 1, 20, 56);
+            LocalDateTime dateComplaintCreationArticle2 = LocalDateTime.of(2022, Month.MAY, 31, 1, 34);
+            LocalDateTime dateComplaintCreationArticle3 = LocalDateTime.of(2021, Month.JULY, 15, 10, 4);
+
+            ComplaintEntity[] complaints = {
+                    ComplaintEntity.builder().description("Queja aleatoria").reply("")
+                            .article(articles[0]).registrationDate(dateComplaintCreationArticle1).state(ComplaintState.OPEN)
+                            .registrationDate(dateComplaintCreationArticle1).userMobile("66").build(),
+                    ComplaintEntity.builder().description("Queja MIW").reply("Respuesta MIW").state(ComplaintState.CLOSED)
+                            .article(articles[1]).registrationDate(dateComplaintCreationArticle2)
+                            .registrationDate(dateComplaintCreationArticle2).userMobile("66").build(),
+                    ComplaintEntity.builder().description("Queja Grado").reply("").state(ComplaintState.OPEN)
+                            .article(articles[2]).registrationDate(dateComplaintCreationArticle3)
+                            .userMobile("66").build(),
+            };
+            this.complaintDao.saveAll(Arrays.asList(complaints));
+            log.warn("        ------- complaints");
 
     }
-
 }
-
-
-
